{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 29,
  "lineage": "c6e7a72e-2515-9cbb-a4c3-56e78c7e51c8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247670276560:vpc/vpc-0c86bea94f0041d06",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0257879821f96d908",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-081d90ce9a9570b73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c86bea94f0041d06",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0307f50783dcdb528",
            "owner_id": "247670276560"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pam_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9725a8c108fc737",
            "arn": "arn:aws:ec2:us-east-1:247670276560:elastic-ip/eipalloc-0f9725a8c108fc737",
            "association_id": "eipassoc-0f1827259d565f42f",
            "domain": "vpc",
            "id": "eipalloc-0f9725a8c108fc737",
            "instance": "i-066401e7e5da8e099",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f8fa627f507845b7",
            "private_dns": "ip-172-31-85-72.ec2.internal",
            "private_ip": "172.31.85.72",
            "public_dns": "ec2-52-55-177-7.compute-1.amazonaws.com",
            "public_ip": "52.55.177.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pam-gateway-eip"
            },
            "tags_all": {
              "Name": "pam-gateway-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.pam_server",
            "aws_security_group.pam_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0446f93cefa2981e5",
            "arn": "arn:aws:ec2:us-east-1:247670276560:instance/i-0f36a5bacffaf1692",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f36a5bacffaf1692",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "pam-gateway-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0415582bd30af9f99",
            "private_dns": "ip-172-31-85-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.85.214",
            "public_dns": "ec2-44-202-65-190.compute-1.amazonaws.com",
            "public_ip": "44.202.65.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08929765b48e94587",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "pam-gateway-demo-target-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7df1a4323b563b9",
            "tags": {
              "Name": "pam-gateway-demo-target",
              "Project": "PAM Gateway"
            },
            "tags_all": {
              "Name": "pam-gateway-demo-target",
              "Project": "PAM Gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bab9728b98efd94e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo_target_sg",
            "aws_security_group.pam_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "random_password.demo_target_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pam_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0446f93cefa2981e5",
            "arn": "arn:aws:ec2:us-east-1:247670276560:instance/i-066401e7e5da8e099",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066401e7e5da8e099",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pam-gateway-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8fa627f507845b7",
            "private_dns": "ip-172-31-85-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.85.72",
            "public_dns": "ec2-52-55-177-7.compute-1.amazonaws.com",
            "public_ip": "52.55.177.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c1e454b33416e90",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "pam-gateway-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7df1a4323b563b9",
            "tags": {
              "Name": "pam-gateway-server",
              "Project": "PAM Gateway"
            },
            "tags_all": {
              "Name": "pam-gateway-server",
              "Project": "PAM Gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0378ef26630f33f41"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.pam_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_target_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247670276560:security-group/sg-0bab9728b98efd94e",
            "description": "SG cho EC2 demo target - chi cho SSH tu server chinh (Guacamole) va tu may Nghia",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cho phep moi ket noi ra ngoai",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bab9728b98efd94e",
            "ingress": [
              {
                "cidr_blocks": [
                  "171.250.161.4/32",
                  "171.236.69.175/32",
                  "171.243.60.72/32",
                  "125.235.238.114/32",
                  "123.28.167.49/32",
                  "1.52.173.120/32"
                ],
                "description": "SSH tu IP thanh vien nhom de setup/kiem tra",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH tu server chinh, Guacamole dung de ket noi demo",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0378ef26630f33f41"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pam-gateway-demo-target-sg",
            "name_prefix": "",
            "owner_id": "247670276560",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pam-gateway-demo-target-sg",
              "Project": "PAM Gateway"
            },
            "tags_all": {
              "Name": "pam-gateway-demo-target-sg",
              "Project": "PAM Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86bea94f0041d06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.pam_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pam_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247670276560:security-group/sg-0378ef26630f33f41",
            "description": "Security group for PAM Gateway (Guacamole + Control Plane) on AWS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Cho phep moi ket noi ra ngoai",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0378ef26630f33f41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for nginx redirect",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS via nginx",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "171.250.161.4/32",
                  "171.236.69.175/32",
                  "171.243.60.72/32",
                  "125.235.238.114/32",
                  "123.28.167.49/32",
                  "1.52.173.120/32"
                ],
                "description": "Control Plane API - chi IP thanh vien nhom",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "171.250.161.4/32"
                ],
                "description": "SSH tu may cua Nghia",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pam-gateway-sg",
            "name_prefix": "",
            "owner_id": "247670276560",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pam-gateway-sg",
              "Project": "PAM Gateway"
            },
            "tags_all": {
              "Name": "pam-gateway-sg",
              "Project": "PAM Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86bea94f0041d06"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}